--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,302 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: #18b4cf;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.vl {
+  border-left: 1px solid rgb(238, 232, 232);
+
+}
+
+
+.float-child {
+  width: 50%;
+  float: left;
+  padding: 20px;
+}  
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+
+
+.container {
+  max-width: 960px;
+}
+
+/*
+ * Custom translucent site header
+ */
+
+.site-header {
+  background-color: rgba(0, 0, 0, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+.site-header a {
+  color: #8e8e8e;
+  transition: color .15s ease-in-out;
+}
+.site-header a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+/*
+ * Dummy devices (replace them with your own or something else entirely!)
+ */
+
+.product-device {
+  position: absolute;
+  right: 10%;
+  bottom: -30%;
+  width: 300px;
+  height: 540px;
+  background-color: #333;
+  border-radius: 21px;
+  transform: rotate(30deg);
+}
+
+.product-device::before {
+  position: absolute;
+  top: 10%;
+  right: 10px;
+  bottom: 10%;
+  left: 10px;
+  content: "";
+  background-color: rgba(255, 255, 255, .1);
+  border-radius: 5px;
+}
+
+.product-device-2 {
+  top: -25%;
+  right: auto;
+  bottom: 0;
+  left: 5%;
+  background-color: #e5e5e5;
+}
+
+
+.flex-equal > * {
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .flex-md-equal > * {
+    flex: 1;
+  }
+}
+
+
+
+/*First Div or card*/
+#firstDiv{
+  margin-top: 32px;
+}
+
+#topCard{
+  line-height: 55px;
+  background-color: #1ee5ff;
+}
+
+.firstPclass{
+  padding-left: 20px;
+}
+#midP{
+  font-size: 100px;
+}
+#lastP{
+  line-height: 30px;
+}
+
+.centerImg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#firstImage{
+  float: right;
+  padding-right: 20px;
+}
+
+
+/*second Div or card*/
+
+#secondDiv{
+  margin-top: 15px;
+}
+#secondCard{
+  line-height: 60px;
+}
+#secondP{
+  padding: 20px;
+}
+#secondDiv1{
+  padding-left: 20px;
+}
+.rowDiv{
+  line-height: 20px;
+}
+.rowP1{
+  text-align: center;
+  color: gray;
+}
+.rowP2{
+  font-size: 40px;
+  text-align: center;
+  color: gray;
+}
+.rowP3{
+  text-align: center;
+  padding-right: 15px;
+}
+.rowP3Last1{
+  font-size: 40px;
+  text-align: center;
+  color: blue;
+  font-weight: bold;
+}
+
+#secondButton{
+  border-radius: 30px;
+  margin-left: 20px;
+}
+
+
+/*third div*/
+#thirdDiv{
+  margin-top: 15px;
+}
+
+#thirdCard{
+  line-height: 60px;
+}
+
+#thirdP1{
+  padding-left: 20px;
+}
+
+#thirdP2{
+  font-size: 50px;
+  padding-left:30px;
+  line-height: 20px;
+  font-weight: bold;
+}
+
+#thirdA{
+  font-size: 15px;
+  padding-left: 2px;
+  font-weight: lighter;
+}
+
+.thirdSvg{
+  width: 35px;
+  height: 30px;
+}
+
+.thirdA1{
+  padding-bottom: 20px;
+  text-decoration: none;
+}
+
+#hideSS{
+  opacity: 0.0;
+}
+
+.map{
+  height: 500px;
+}
+
+.combobox-input{
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
+}
+
+
+
+
+
+
+
+bodY {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.center {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #18b4cf;
+}
+.wave {
+  width: 5px;
+  height: 100px;
+  background: linear-gradient(45deg, cyan, #fff);
+  margin: 10px;
+  animation: wave 1s linear infinite;
+  border-radius: 20px;
+}
+.wave:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.wave:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.wave:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.wave:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.wave:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.wave:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.wave:nth-child(8) {
+  animation-delay: 0.7s;
+}
+.wave:nth-child(9) {
+  animation-delay: 0.8s;
+}
+.wave:nth-child(10) {
+  animation-delay: 0.9s;
+}
+
+@keyframes wave {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
